<package format="3">
  <name>dynamixel_controllers</name>
  <version>0.4.1</version>
  <description>
	This package contains a configurable node, services and a spawner script
        to start, stop and restart one or more controller plugins. Reusable
        controller types are defined for common Dynamixel motor joints. Both speed and
        torque can be set for each joint. This python package can be used by more
        specific robot controllers and all configurable parameters can be loaded
        via a yaml file.
  </description>
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_controllers</url>
  <url type="bugtracker">https://github.com/arebgun/dynamixel_motor</url>

  <author>Antons Rebguns</author>
  <author>Cody Jorgensen</author>
  <author>Cara Slutter</author>

  <build_depend>rosidl_default_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rcl_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>dynamixel_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>dynamixel_driver</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
