<package>
  <name>dynamixel_motor</name>
  <version>0.4.1</version>
  <description>
    This stack contains packages that are used to interface with Robotis
    Dynamixel line of servo motors. This stack was tested with and fully
    supports AX-12, AX-18, RX-24, RX-28, MX-28, RX-64, MX-64, EX-106 and
    MX-106 models.
  </description>
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_driver</url>
  <url type="bugtracker">https://github.com/arebgun/dynamixel_motor</url>

  <author>Antons Rebguns</author>

  <!--<exec_depend>dynamixel_tutorials</run_depend>-->
  <exec_depend>dynamixel_msgs</exec_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>dynamixel_driver</exec_depend>

</package>
