<package format="3">
  <name>dynamixel_msgs</name>
  <version>0.4.1</version>
  <description>
    Common messages used throughout dynamixel_motor stack.
  </description>
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamixel_driver</url>
  <url type="bugtracker">https://github.com/arebgun/dynamixel_motor</url>

  <author>Antons Rebguns</author>

  <build_depend>rosidl_default_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
